2018-04-04  Thomas E. Dickey  <dickey@invisible-island.net>

	* tests/da.py:
	works for me (I fixed that in January 2015 from report by Nachman)

	* tests/decrqss.py, tests/decera.py, tests/decsera.py, tests/decic.py, tests/decdc.py, tests/xterm_winops.py:
	works for me

2017-11-05  Thomas E. Dickey  <dickey@invisible-island.net>

	* tests/decset.py:
	copy from https://github.com/gnachman/iTerm2/tree/689265c2ad82bf957dee71220b02aed8c15ee2ac

2016-06-21  Thomas E. Dickey  <dickey@invisible-island.net>

	* tests/decstbm.py, tests/apc.py:
	copy from https://github.com/gnachman/iTerm2/tree/689265c2ad82bf957dee71220b02aed8c15ee2ac

2015-04-15  Thomas E. Dickey  <dickey@invisible-island.net>

	* tests/dch.py, tests/xterm_winops.py:
	copy from https://github.com/gnachman/iTerm2/tree/689265c2ad82bf957dee71220b02aed8c15ee2ac

2015-04-14  Thomas E. Dickey  <dickey@invisible-island.net>

	* escutil.py, tests/vt.py, tests/ris.py, tests/ff.py, tests/lf.py, tests/nel.py, tests/ri.py, tests/ind.py:
	copy from https://github.com/gnachman/iTerm2/tree/689265c2ad82bf957dee71220b02aed8c15ee2ac

2015-03-08  Thomas E. Dickey  <dickey@invisible-island.net>

	* README.txt, escargs.py, escio.py, tests/decstr.py:
	copy from https://github.com/gnachman/iTerm2/tree/689265c2ad82bf957dee71220b02aed8c15ee2ac

2015-03-07  Thomas E. Dickey  <dickey@invisible-island.net>

	* tests/decset_tite_inhibit.py, tests/save_restore_cursor.py:
	copy from https://github.com/gnachman/iTerm2/tree/689265c2ad82bf957dee71220b02aed8c15ee2ac

2015-03-01  Thomas E. Dickey  <dickey@invisible-island.net>

	* tests/da2.py, tests/dcs.py:
	copy from https://github.com/gnachman/iTerm2/tree/689265c2ad82bf957dee71220b02aed8c15ee2ac

2015-02-23  Thomas E. Dickey  <dickey@invisible-island.net>

	* tests/cub.py, tests/cr.py, tests/bs.py:
	copy from https://github.com/gnachman/iTerm2/tree/689265c2ad82bf957dee71220b02aed8c15ee2ac

2015-02-22  Thomas E. Dickey  <dickey@invisible-island.net>
